--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -24,6 +24,10 @@
        [routerLinkActive]="['active']"
        [routerLink]="['watchlist']">Watch List</a>
   </li>
-
+  <li class="nav-item">
+    <a class="nav-link"
+       [routerLinkActive]="['active']"
+       [routerLink]="['booklist']">Book List</a>
+  </li>
 
 </ul>
